--- a/index.html
+++ b/index.html
@@ -6,5 +6,22 @@
     <title>Document</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <nav class="header">
+      <div class="container header-container">
+        <div class="header-logo">
+          <img src="image/Logo.svg" alt="Logo" />
+          <div>Product</div>
+        </div>
+        <ul class="header-links">
+          <li><a href="#">Product</a></li>
+          <li><a href="#">Customers</a></li>
+          <li><a href="#">Pricing</a></li>
+          <li><a href="#">Resources</a></li>
+          <li><a href="#" class="btn sign-in">Sign In</a></li>
+          <li><a href="#" class="btn sign-up">Sign Up</a></li>
+        </ul>
+      </div>
+    </nav>
+  </body>
 </html>
