--- a/index.html
+++ b/index.html
@@ -23,5 +23,19 @@
         </ul>
       </div>
     </nav>
+    <section class="product">
+      <div class="product-description">
+        <h1 class="product-title">Work at the speed of thought</h1>
+        <p class="product-text">
+          Tools, tutorials, design and innovation experts, all in one place! The
+          most intuitive way to imagine your next user experience.
+        </p>
+        <div class="product-btns">
+          <a href="#" class="btn primary-btn">Get started</a>
+          <a href="#" class="btn secondary-btn">Watch the Video</a>
+        </div>
+      </div>
+      <img src="image/product.svg" class="product-img" alt="" />
+    </section>
   </body>
 </html>
