add HTML section for

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <nav class="header">
+    <header class="header">
       <div class="container header-container">
         <div class="header-logo">
-          <img src="image/Logo.svg" alt="Logo" />
+          <a href="#" class=""><img src="image/Logo.svg" alt="Logo" /></a>
           <div>Product</div>
         </div>
         <ul class="header-links">
@@ -22,10 +22,10 @@
           <li><a href="#" class="btn sign-up">Sign Up</a></li>
         </ul>
       </div>
-    </nav>
+    </header>
     <section class="product">
-      <div class="product-description">
-        <h1 class="product-title">Work at the speed of thought</h1>
+      <div class="container product-container">
+        <h1 class="title product-title">Work at the speed of thought</h1>
         <p class="product-text">
           Tools, tutorials, design and innovation experts, all in one place! The
           most intuitive way to imagine your next user experience.
@@ -36,6 +36,40 @@
         </div>
       </div>
       <img src="image/product.svg" class="product-img" alt="" />
+    </section>
+    <section class="for">
+      <div class="for-top">
+        <h1 class="title">Product was Built Specifically for You</h1>
+      </div>
+      <div class="container for-container">
+        <div class="for-item">
+          <div class="for-item-title">
+            <img src="image/mouse.svg" class="for-img" alt="" />
+            <h3>First click tests</h3>
+            <p class="for-subtitle">While most people enjoy casino gambling</p>
+          </div>
+          <div class="for-item-title">
+            <img src="image/designphoto.svg" class="for-img" alt="" />
+            <h3>Design surveys</h3>
+            <p class="for-subtitle">
+              Sports betting, lottery and bingo playing for the fun
+            </p>
+          </div>
+          <div class="for-item-title">
+            <img src="image/heart.svg" class="for-img" alt="" />
+            <h3>Preference tests</h3>
+            <p class="for-subtitle">The Myspace page defines the individual.</p>
+          </div>
+          <div class="for-item-title">
+            <img src="image/timedesert.svg" class="for-img" alt="" />
+            <h3>Five second tests</h3>
+            <p class="for-subtitle">
+              Personal choices and the overall personality of the person.
+            </p>
+          </div>
+          <a href="#" class="btn for-btn">SIGN UP NOW</a>
+        </div>
+      </div>
     </section>
   </body>
 </html>
