add section for

--- a/index.html
+++ b/index.html
@@ -13,14 +13,16 @@
           <a href="#" class=""><img src="image/Logo.svg" alt="Logo" /></a>
           <div>Product</div>
         </div>
-        <ul class="header-links">
-          <li><a href="#">Product</a></li>
-          <li><a href="#">Customers</a></li>
-          <li><a href="#">Pricing</a></li>
-          <li><a href="#">Resources</a></li>
-          <li><a href="#" class="btn sign-in">Sign In</a></li>
-          <li><a href="#" class="btn sign-up">Sign Up</a></li>
-        </ul>
+        <nav>
+          <ul class="header-links">
+            <li><a href="#">Product</a></li>
+            <li><a href="#">Customers</a></li>
+            <li><a href="#">Pricing</a></li>
+            <li><a href="#">Resources</a></li>
+            <li><a href="#" class="btn sign-in">Sign In</a></li>
+            <li><a href="#" class="btn sign-up">Sign Up</a></li>
+          </ul>
+        </nav>
       </div>
     </header>
     <section class="product">
@@ -67,7 +69,7 @@
               Personal choices and the overall personality of the person.
             </p>
           </div>
-          <a href="#" class="btn for-btn">SIGN UP NOW</a>
+          <a href="#" class="btn for-btn cta-button">SIGN UP NOW</a>
         </div>
       </div>
     </section>
