add section about

--- a/index.html
+++ b/index.html
@@ -73,5 +73,83 @@
         </div>
       </div>
     </section>
+    <section class="about">
+      <div class="container about-container">
+        <div class="about-section">
+          <div class="about-text">
+            <strong>Effortless Validation for</strong>
+            <h2>Effortless Validation for Management</h2>
+            <p>
+              The Myspace page defines the individual, his or her
+              characteristics, traits, personal choices, and the overall
+              personality of the person.
+            </p>
+            <p>
+              <strong>Accessory makers:</strong> While most people enjoy casino
+              gambling, sports betting, lottery, and bingo playing for fun.
+            </p>
+            <p>
+              <strong>Attentionists:</strong> If you are looking for a new way
+              to promote your business that won't cost you more money,
+            </p>
+          </div>
+          <div class="image-about">
+            <img src="image/documents-about.png" alt="documents" />
+          </div>
+        </div>
+
+        <div class="about-section-sec">
+          <div class="about-text-sec">
+            <strong>Easier decision making for</strong>
+            <h2>Easier Decision Making for Customer Support</h2>
+            <p>
+              The Myspace page defines the individual, his or her
+              characteristics, traits, personal choices, and the overall
+              personality of the person.
+            </p>
+            <ul class="about-list">
+              <li>
+                <img src="image/yellow-bird.svg" alt="check" /> Never worry
+                about overpaying for your energy again.
+              </li>
+              <li>
+                <img src="image/red-bird.svg" alt="check" /> We will only switch
+                you to energy companies that we trust and will treat you right.
+              </li>
+              <li>
+                <img src="image/blue-bird.svg" alt="check" /> We track the
+                markets daily and know where the savings are.
+              </li>
+            </ul>
+          </div>
+          <div class="image-about-sec">
+            <img src="image/laptop-about.png" alt="Laptop" />
+          </div>
+        </div>
+
+        <div class="about-section">
+          <div class="about-text">
+            <strong>Optimisation for</strong>
+            <h2>Optimization for Collaborative</h2>
+            <p>
+              Few would argue that, despite the advancements of feminism over
+              the past three decades, women still face a double standard when it
+              comes to their behavior.
+            </p>
+            <p>
+              <strong>Accessory makers:</strong> While most people enjoy casino
+              gambling, sports betting, lottery, and bingo playing for fun.
+            </p>
+            <p>
+              <strong>Attentionists:</strong> If you are looking for a new way
+              to promote your business that won't cost you more money,
+            </p>
+          </div>
+          <div class="image-about">
+            <img src="image/about-folder.png" alt="about-folder" />
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
