--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Product</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -33,8 +39,8 @@
           most intuitive way to imagine your next user experience.
         </p>
         <div class="product-btns">
-          <a href="#" class="btn primary-btn">Get started</a>
-          <a href="#" class="btn secondary-btn">Watch the Video</a>
+          <a href="#" class="btn product-primary-btn">Get started</a>
+          <a href="#" class="btn prodduct-secondary-btn">Watch the Video</a>
         </div>
       </div>
       <img src="image/product.svg" class="product-img" alt="" />
