--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </p>
         <div class="product-btns">
           <a href="#" class="btn product-primary-btn">Get started</a>
-          <a href="#" class="btn prodduct-secondary-btn">Watch the Video</a>
+          <a href="#" class="btn product-secondary-btn">Watch the Video</a>
         </div>
       </div>
       <img src="image/product.svg" class="product-img" alt="" />
