--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
     <header class="header">
       <div class="container header-container">
         <div class="header-logo">
-          <a href="#" class=""><img src="image/Logo.svg" alt="Logo" /> </a>
-          <div>Product</div>
+          <a href="#"
+            ><img src="image/logo.svg" alt="Logo" />
+            <img src="image/logotext.svg" alt="" />
+          </a>
         </div>
         <nav>
           <ul class="header-links">
@@ -25,10 +27,12 @@
             <li><a href="#">Customers</a></li>
             <li><a href="#">Pricing</a></li>
             <li><a href="#">Resources</a></li>
-            <li><a href="#" class="btn sign-in">Sign In</a></li>
-            <li><a href="#" class="btn sign-up">Sign Up</a></li>
           </ul>
         </nav>
+        <div>
+          <a href="#" class="btn sign-in">Sign In</a>
+          <a href="#" class="btn sign-up">Sign Up</a>
+        </div>
       </div>
     </header>
     <section class="product">
