--- a/index.html
+++ b/index.html
@@ -161,5 +161,53 @@
         </div>
       </div>
     </section>
+
+    <section class="process">
+      <div class="container product-container">
+        <h2>Quick & Easy Process</h2>
+        <p class="process-description">
+          Do you require some help for your project: Conception workshop,
+          prototyping, marketing strategy, landing page, Ux/UI?
+        </p>
+        <div class="process-cards">
+          <div class="process-item left">
+            <div class="process-img left red-border">
+              <img src="image/person.svg" alt="Expert 1" />
+            </div>
+            <div class="process-text">
+              <p>I can take care of your pitch</p>
+            </div>
+          </div>
+
+          <div class="process-item right">
+            <div class="process-text">
+              <p>I can prototype your app</p>
+            </div>
+            <div class="process-img right purple-border">
+              <img src="image/old-person.svg" alt="Expert 3" />
+            </div>
+          </div>
+
+          <div class="process-item left">
+            <div class="process-text">
+              <p>I can design you website</p>
+            </div>
+            <div class="process-img left green-border">
+              <img src="image/person-man.svg" alt="Expert 2" />
+            </div>
+          </div>
+
+          <div class="process-item right">
+            <div class="process-img right blue-border">
+              <img src="image/Avator-bald.svg" alt="Expert 4" />
+            </div>
+            <div class="process-text">
+              <p>I can help marketing strategy</p>
+            </div>
+          </div>
+        </div>
+        <button class="process-button">Contact our expert</button>
+      </div>
+    </section>
   </body>
 </html>
