add section strategies

--- a/index.html
+++ b/index.html
@@ -13,201 +13,242 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header class="header">
-      <div class="container header-container">
-        <div class="header-logo">
-          <a href="#"
-            ><img src="image/logo.svg" alt="Logo" />
-            <img src="image/logotext.svg" alt="" />
-          </a>
-        </div>
-        <nav>
-          <ul class="header-links">
-            <li><a href="#">Product</a></li>
-            <li><a href="#">Customers</a></li>
-            <li><a href="#">Pricing</a></li>
-            <li><a href="#">Resources</a></li>
-          </ul>
-        </nav>
-        <div>
-          <a href="#" class="btn sign-in">Sign In</a>
-          <a href="#" class="btn sign-up">Sign Up</a>
-        </div>
-      </div>
-    </header>
-    <section class="product">
-      <div class="container product-container">
-        <h1 class="title product-title">Work at the speed of thought</h1>
-        <p class="product-text">
-          Tools, tutorials, design and innovation experts, all in one place! The
-          most intuitive way to imagine your next user experience.
-        </p>
-        <div class="product-btns">
-          <a href="#" class="btn product-primary-btn">Get started</a>
-          <a href="#" class="btn product-secondary-btn">Watch the Video</a>
-        </div>
-      </div>
-      <img src="image/product.svg" class="product-img" alt="" />
-    </section>
-    <section class="for">
-      <div class="for-top">
-        <h1 class="title">Product was Built Specifically for You</h1>
-      </div>
-      <div class="container for-container">
-        <div class="for-item">
-          <div class="for-item-title">
-            <img src="image/mouse.svg" class="for-img" alt="" />
-            <h3>First click tests</h3>
-            <p class="for-subtitle">While most people enjoy casino gambling</p>
+    <main>
+      <header class="header">
+        <div class="container header-container">
+          <div class="header-logo">
+            <a href="#"
+              ><img src="image/logo.svg" alt="Logo" />
+              <img src="image/logotext.svg" alt="" />
+            </a>
           </div>
-          <div class="for-item-title">
-            <img src="image/designphoto.svg" class="for-img" alt="" />
-            <h3>Design surveys</h3>
-            <p class="for-subtitle">
-              Sports betting, lottery and bingo playing for the fun
-            </p>
-          </div>
-          <div class="for-item-title">
-            <img src="image/heart.svg" class="for-img" alt="" />
-            <h3>Preference tests</h3>
-            <p class="for-subtitle">The Myspace page defines the individual.</p>
-          </div>
-          <div class="for-item-title">
-            <img src="image/timedesert.svg" class="for-img" alt="" />
-            <h3>Five second tests</h3>
-            <p class="for-subtitle">
-              Personal choices and the overall personality of the person.
-            </p>
-          </div>
-          <a href="#" class="btn for-btn cta-button">SIGN UP NOW</a>
-        </div>
-      </div>
-    </section>
-    <section class="about">
-      <div class="container about-container">
-        <div class="about-section">
-          <div class="about-text">
-            <strong>Effortless Validation for</strong>
-            <h2>Effortless Validation for Management</h2>
-            <p>
-              The Myspace page defines the individual, his or her
-              characteristics, traits, personal choices, and the overall
-              personality of the person.
-            </p>
-            <p>
-              <strong>Accessory makers:</strong> While most people enjoy casino
-              gambling, sports betting, lottery, and bingo playing for fun.
-            </p>
-            <p>
-              <strong>Attentionists:</strong> If you are looking for a new way
-              to promote your business that won't cost you more money,
-            </p>
-          </div>
-          <div class="image-about">
-            <img src="image/documents-about.png" alt="documents" />
-          </div>
-        </div>
-
-        <div class="about-section-sec">
-          <div class="about-text-sec">
-            <strong>Easier decision making for</strong>
-            <h2>Easier Decision Making for Customer Support</h2>
-            <p>
-              The Myspace page defines the individual, his or her
-              characteristics, traits, personal choices, and the overall
-              personality of the person.
-            </p>
-            <ul class="about-list">
-              <li>
-                <img src="image/yellow-bird.svg" alt="check" /> Never worry
-                about overpaying for your energy again.
-              </li>
-              <li>
-                <img src="image/red-bird.svg" alt="check" /> We will only switch
-                you to energy companies that we trust and will treat you right.
-              </li>
-              <li>
-                <img src="image/blue-bird.svg" alt="check" /> We track the
-                markets daily and know where the savings are.
-              </li>
+          <nav>
+            <ul class="header-links">
+              <li><a href="#">Product</a></li>
+              <li><a href="#">Customers</a></li>
+              <li><a href="#">Pricing</a></li>
+              <li><a href="#">Resources</a></li>
             </ul>
-          </div>
-          <div class="image-about-sec">
-            <img src="image/laptop-about.png" alt="Laptop" />
-          </div>
-        </div>
-
-        <div class="about-section">
-          <div class="about-text">
-            <strong>Optimisation for</strong>
-            <h2>Optimization for Collaborative</h2>
-            <p>
-              Few would argue that, despite the advancements of feminism over
-              the past three decades, women still face a double standard when it
-              comes to their behavior.
-            </p>
-            <p>
-              <strong>Accessory makers:</strong> While most people enjoy casino
-              gambling, sports betting, lottery, and bingo playing for fun.
-            </p>
-            <p>
-              <strong>Attentionists:</strong> If you are looking for a new way
-              to promote your business that won't cost you more money,
-            </p>
-          </div>
-          <div class="image-about">
-            <img src="image/about-folder.png" alt="about-folder" />
+          </nav>
+          <div>
+            <a href="#" class="btn sign-in">Sign In</a>
+            <a href="#" class="btn sign-up">Sign Up</a>
           </div>
         </div>
-      </div>
-    </section>
-
-    <section class="process">
-      <div class="container product-container">
-        <h2>Quick & Easy Process</h2>
-        <p class="process-description">
-          Do you require some help for your project: Conception workshop,
-          prototyping, marketing strategy, landing page, Ux/UI?
-        </p>
-        <div class="process-cards">
-          <div class="process-item left">
-            <div class="process-img left red-border">
-              <img src="image/person.svg" alt="Expert 1" />
+      </header>
+      <section class="product">
+        <div class="container product-container">
+          <h1 class="title product-title">Work at the speed of thought</h1>
+          <p class="product-text">
+            Tools, tutorials, design and innovation experts, all in one place!
+            The most intuitive way to imagine your next user experience.
+          </p>
+          <div class="product-btns">
+            <a href="#" class="btn product-primary-btn">Get started</a>
+            <a href="#" class="btn product-secondary-btn">Watch the Video</a>
+          </div>
+        </div>
+        <img src="image/product.svg" class="product-img" alt="" />
+      </section>
+      <section class="for">
+        <div class="for-top">
+          <h1 class="title">Product was Built Specifically for You</h1>
+        </div>
+        <div class="container for-container">
+          <div class="for-item">
+            <div class="for-item-title">
+              <img src="image/mouse.svg" class="for-img" alt="" />
+              <h3>First click tests</h3>
+              <p class="for-subtitle">
+                While most people enjoy casino gambling
+              </p>
             </div>
-            <div class="process-text">
-              <p>I can take care of your pitch</p>
+            <div class="for-item-title">
+              <img src="image/designphoto.svg" class="for-img" alt="" />
+              <h3>Design surveys</h3>
+              <p class="for-subtitle">
+                Sports betting, lottery and bingo playing for the fun
+              </p>
+            </div>
+            <div class="for-item-title">
+              <img src="image/heart.svg" class="for-img" alt="" />
+              <h3>Preference tests</h3>
+              <p class="for-subtitle">
+                The Myspace page defines the individual.
+              </p>
+            </div>
+            <div class="for-item-title">
+              <img src="image/timedesert.svg" class="for-img" alt="" />
+              <h3>Five second tests</h3>
+              <p class="for-subtitle">
+                Personal choices and the overall personality of the person.
+              </p>
+            </div>
+            <a href="#" class="btn for-btn cta-button">SIGN UP NOW</a>
+          </div>
+        </div>
+      </section>
+      <section class="about">
+        <div class="container about-container">
+          <div class="about-section">
+            <div class="about-text">
+              <strong>Effortless Validation for</strong>
+              <h2>Effortless Validation for Management</h2>
+              <p>
+                The Myspace page defines the individual, his or her
+                characteristics, traits, personal choices, and the overall
+                personality of the person.
+              </p>
+              <p>
+                <strong>Accessory makers:</strong> While most people enjoy
+                casino gambling, sports betting, lottery, and bingo playing for
+                fun.
+              </p>
+              <p>
+                <strong>Attentionists:</strong> If you are looking for a new way
+                to promote your business that won't cost you more money,
+              </p>
+            </div>
+            <div class="image-about">
+              <img src="image/documents-about.png" alt="documents" />
             </div>
           </div>
 
-          <div class="process-item right">
-            <div class="process-text">
-              <p>I can prototype your app</p>
+          <div class="about-section-sec">
+            <div class="about-text-sec">
+              <strong>Easier decision making for</strong>
+              <h2>Easier Decision Making for Customer Support</h2>
+              <p>
+                The Myspace page defines the individual, his or her
+                characteristics, traits, personal choices, and the overall
+                personality of the person.
+              </p>
+              <ul class="about-list">
+                <li>
+                  <img src="image/yellow-bird.svg" alt="check" /> Never worry
+                  about overpaying for your energy again.
+                </li>
+                <li>
+                  <img src="image/red-bird.svg" alt="check" /> We will only
+                  switch you to energy companies that we trust and will treat
+                  you right.
+                </li>
+                <li>
+                  <img src="image/blue-bird.svg" alt="check" /> We track the
+                  markets daily and know where the savings are.
+                </li>
+              </ul>
             </div>
-            <div class="process-img right purple-border">
-              <img src="image/old-person.svg" alt="Expert 3" />
+            <div class="image-about-sec">
+              <img src="image/laptop-about.png" alt="Laptop" />
             </div>
           </div>
 
-          <div class="process-item left">
-            <div class="process-text">
-              <p>I can design you website</p>
+          <div class="about-section">
+            <div class="about-text">
+              <strong>Optimisation for</strong>
+              <h2>Optimization for Collaborative</h2>
+              <p>
+                Few would argue that, despite the advancements of feminism over
+                the past three decades, women still face a double standard when
+                it comes to their behavior.
+              </p>
+              <p>
+                <strong>Accessory makers:</strong> While most people enjoy
+                casino gambling, sports betting, lottery, and bingo playing for
+                fun.
+              </p>
+              <p>
+                <strong>Attentionists:</strong> If you are looking for a new way
+                to promote your business that won't cost you more money,
+              </p>
             </div>
-            <div class="process-img left green-border">
-              <img src="image/person-man.svg" alt="Expert 2" />
-            </div>
-          </div>
-
-          <div class="process-item right">
-            <div class="process-img right blue-border">
-              <img src="image/Avator-bald.svg" alt="Expert 4" />
-            </div>
-            <div class="process-text">
-              <p>I can help marketing strategy</p>
+            <div class="image-about">
+              <img src="image/about-folder.png" alt="about-folder" />
             </div>
           </div>
         </div>
-        <button class="process-button">Contact our expert</button>
-      </div>
-    </section>
+      </section>
+
+      <section class="process">
+        <div class="container product-container">
+          <h2>Quick & Easy Process</h2>
+          <p class="process-description">
+            Do you require some help for your project: Conception workshop,
+            prototyping, marketing strategy, landing page, Ux/UI?
+          </p>
+          <div class="process-cards">
+            <div class="process-item left">
+              <div class="process-img left red-border">
+                <img src="image/person.svg" alt="Expert 1" />
+              </div>
+              <div class="process-text">
+                <p>I can take care of your pitch</p>
+              </div>
+            </div>
+
+            <div class="process-item right">
+              <div class="process-text">
+                <p>I can prototype your app</p>
+              </div>
+              <div class="process-img right purple-border">
+                <img src="image/old-person.svg" alt="Expert 3" />
+              </div>
+            </div>
+
+            <div class="process-item left">
+              <div class="process-text">
+                <p>I can design you website</p>
+              </div>
+              <div class="process-img left green-border">
+                <img src="image/person-man.svg" alt="Expert 2" />
+              </div>
+            </div>
+
+            <div class="process-item right">
+              <div class="process-img right blue-border">
+                <img src="image/Avator-bald.svg" alt="Expert 4" />
+              </div>
+              <div class="process-text">
+                <p>I can help marketing strategy</p>
+              </div>
+            </div>
+          </div>
+          <button class="process-button">Contact our expert</button>
+        </div>
+      </section>
+      <section class="strategies">
+        <div class="strategies-container container">
+          <h2>Contents Strategies</h2>
+          <p>
+            We focus on ergonomics and meeting you where you work. It’s only a
+            keystroke away.
+          </p>
+          <div class="strategies-cards">
+            <div class="strategies-card">
+              <img src="image/laptop-work.png" alt="Card 1" />
+              <div class="strategies-card-content">
+                <p>By Wahid Ari | 03 March 2019</p>
+                <h3>Increasing Prosperity With Positive Thinking</h3>
+              </div>
+            </div>
+            <div class="strategies-card">
+              <img src="image/group.png" alt="Card 2" />
+              <div class="strategies-card-content">
+                <p>By Wahid Ari | 03 March 2019</p>
+                <h3>Motivation Is The First Step To Success</h3>
+              </div>
+            </div>
+            <div class="strategies-card">
+              <img src="image/bitmap.png" alt="Card 3" />
+              <div class="strategies-card-content">
+                <p>By Wahid Ari | 03 March 2019</p>
+                <h3>Success Steps For Your Personal Or Business</h3>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
