fix problem position

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
       </section>
 
       <section class="process">
-        <div class="container product-container">
+        <div class="container process-container">
           <h2>Quick & Easy Process</h2>
           <p class="process-description">
             Do you require some help for your project: Conception workshop,
