fix text strategies

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
       <section class="strategies">
         <div class="strategies-container container">
           <h2>Contents Strategies</h2>
-          <p>
+          <p class="strategies-p">
             We focus on ergonomics and meeting you where you work. It’s only a
             keystroke away.
           </p>
