add html section price

--- a/index.html
+++ b/index.html
@@ -249,6 +249,53 @@
           </div>
         </div>
       </section>
+      <section class="price">
+        <div class="container price-container">
+          <h2>Price Table</h2>
+          <p>We offer competitive price</p>
+          <div class="price-cards">
+            <div class="price-card">
+              <h4>Free</h4>
+              <p>Brief price description</p>
+              <img src="image/zero.svg" alt="" />
+              <img src="image/dollar.svg" alt="" />
+              <p>Per/month</p>
+              <p>Only 2 Operators</p>
+              <p>Notifications</p>
+              <p>Landing Pages</p>
+              <button class="btn price-btns">
+                <a href="#"> Order Now </a>
+              </button>
+            </div>
+            <div class="price-card">
+              <h4>Standard</h4>
+              <p>Brief price description</p>
+              <img src="image/five.svg" alt="" />
+              <img src="image/dollar.svg" alt="" />
+              <p>Per/month</p>
+              <p>Only +5 Operators</p>
+              <p>Notifications</p>
+              <p>Landing Pages</p>
+              <button class="btn price-btns">
+                <a href="#"> Order Now </a>
+              </button>
+            </div>
+            <div class="price-card">
+              <h4>Premium</h4>
+              <p>Brief price description</p>
+              <img src="image/ten.svg" alt="" />
+              <img src="image/dollar.svg" alt="" />
+              <p>Per/month</p>
+              <p>Only +10 Operators</p>
+              <p>Notifications</p>
+              <p>Landing Pages</p>
+              <button class="btn price-btns">
+                <a href="#"> Order Now </a>
+              </button>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
