--- a/index.html
+++ b/index.html
@@ -247,52 +247,56 @@
               </div>
             </div>
           </div>
+          <div class="dot">.</div>
         </div>
       </section>
       <section class="price">
-        <div class="container price-container">
-          <h2>Price Table</h2>
-          <p>We offer competitive price</p>
+        <div class="price-container container">
+          <div class="price-title">
+            <h2>Price Table</h2>
+            <p>We offer competitive price</p>
+          </div>
+
           <div class="price-cards">
-            <div class="price-card">
-              <h4>Free</h4>
-              <p>Brief price description</p>
-              <img src="image/zero.svg" alt="" />
+            <h3>Free</h3>
+            <p>Brief price description</p>
+            <img class="price-card" src="image/zero.svg" alt="" />
+            <img src="image/dollar.svg" alt="" />
+            <p>/month</p>
+            <ul class="price-features">
+              <li>Only 2 Operators</li>
+              <li>Notifications</li>
+              <li>Landing Pages</li>
+            </ul>
+            <button>Order Now</button>
+          </div>
+          <div class="featured">
+            <h3>Standard</h3>
+            <p>Brief price description</p>
+            <img class="price-card" src="image/five.svg" alt="" />
+            <img src="image/dollar.svg" alt="" />
+            <p>/month</p>
+            <ul class="price-features">
+              <li>5+ Operators</li>
+              <li>Notifications</li>
+              <li>Landing Pages</li>
+            </ul>
+            <button class="featured-btn">Order Now</button>
+          </div>
+          <div class="price-cards">
+            <h3>Premium</h3>
+            <p>Brief price description</p>
+            <div>
+              <img class="price-card" src="image/ten.svg" alt="" />
               <img src="image/dollar.svg" alt="" />
-              <p>Per/month</p>
-              <p>Only 2 Operators</p>
-              <p>Notifications</p>
-              <p>Landing Pages</p>
-              <button class="btn price-btns">
-                <a href="#"> Order Now </a>
-              </button>
+              <p>/month</p>
             </div>
-            <div class="price-card">
-              <h4>Standard</h4>
-              <p>Brief price description</p>
-              <img src="image/five.svg" alt="" />
-              <img src="image/dollar.svg" alt="" />
-              <p>Per/month</p>
-              <p>Only +5 Operators</p>
-              <p>Notifications</p>
-              <p>Landing Pages</p>
-              <button class="btn price-btns">
-                <a href="#"> Order Now </a>
-              </button>
-            </div>
-            <div class="price-card">
-              <h4>Premium</h4>
-              <p>Brief price description</p>
-              <img src="image/ten.svg" alt="" />
-              <img src="image/dollar.svg" alt="" />
-              <p>Per/month</p>
-              <p>Only +10 Operators</p>
-              <p>Notifications</p>
-              <p>Landing Pages</p>
-              <button class="btn price-btns">
-                <a href="#"> Order Now </a>
-              </button>
-            </div>
+            <ul class="price-features">
+              <li>10+ Operators</li>
+              <li>Notifications</li>
+              <li>Landing Pages</li>
+            </ul>
+            <button>Order Now</button>
           </div>
         </div>
       </section>
