--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
             </ul>
             <button>Order Now</button>
           </div>
-          <div class="featured">
+          <div class="price-cards featured">
             <h3>Standard</h3>
             <p>Brief price description</p>
             <img class="price-card" src="image/five.svg" alt="" />
