--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             <p>Brief price description</p>
             <img class="price-card" src="image/zero.svg" alt="" />
             <img src="image/dollar.svg" alt="" />
-            <p>/month</p>
+            <p>per/month</p>
             <ul class="price-features">
               <li>Only 2 Operators</li>
               <li>Notifications</li>
@@ -275,7 +275,7 @@
             <p>Brief price description</p>
             <img class="price-card" src="image/five.svg" alt="" />
             <img src="image/dollar.svg" alt="" />
-            <p>/month</p>
+            <p>per/month</p>
             <ul class="price-features">
               <li>5+ Operators</li>
               <li>Notifications</li>
@@ -289,7 +289,7 @@
             <div>
               <img class="price-card" src="image/ten.svg" alt="" />
               <img src="image/dollar.svg" alt="" />
-              <p>/month</p>
+              <p>per/month</p>
             </div>
             <ul class="price-features">
               <li>10+ Operators</li>
