add section comments and banner

--- a/index.html
+++ b/index.html
@@ -260,9 +260,8 @@
           <div class="price-cards">
             <h3>Free</h3>
             <p>Brief price description</p>
-            <img class="price-card" src="image/zero.svg" alt="" />
-            <img src="image/dollar.svg" alt="" />
-            <p>per/month</p>
+            <h2 class="cost">0</h2>
+            <p>$ per/month</p>
             <ul class="price-features">
               <li>Only 2 Operators</li>
               <li>Notifications</li>
@@ -273,9 +272,9 @@
           <div class="price-cards">
             <h3>Standard</h3>
             <p>Brief price description</p>
-            <img class="price-card" src="image/five.svg" alt="" />
-            <img src="image/dollar.svg" alt="" />
-            <p>per/month</p>
+            <h2 class="cost">5</h2>
+
+            <p>$ per/month</p>
             <ul class="price-features">
               <li>5+ Operators</li>
               <li>Notifications</li>
@@ -287,9 +286,8 @@
             <h3>Premium</h3>
             <p>Brief price description</p>
             <div>
-              <img class="price-card" src="image/ten.svg" alt="" />
-              <img src="image/dollar.svg" alt="" />
-              <p>per/month</p>
+              <h2 class="cost">10</h2>
+              <p>$ per/month</p>
             </div>
             <ul class="price-features">
               <li>10+ Operators</li>
@@ -298,6 +296,78 @@
             </ul>
             <button>Order Now</button>
           </div>
+        </div>
+      </section>
+      <section class="comments">
+        <div class="comments-container container">
+          <h2>What Clients Say</h2>
+          <p>
+            Problems trying to resolve the conflict between the two major realms
+            of Classical physics: Newtonian mechanics
+          </p>
+          <div class="commentator">
+            <span class="stars">★★★★☆</span>
+            <p class="commentator-text">
+              Product helps you see how many more days you need to work to reach
+              your financial goal.
+            </p>
+            <div class="commentator-avatar">
+              <img
+                src="image/first-commentator.svg"
+                alt=""
+                class="commentator-img"
+              />
+              <div class="commentator-name">
+                <h4>Wahid Ari</h4>
+                <p>Designer</p>
+              </div>
+            </div>
+          </div>
+          <div class="commentator">
+            <span class="stars">★★★★☆</span>
+            <p class="commentator-text">
+              Product helps you see how many more days you need to work to reach
+              your financial goal.
+            </p>
+            <div class="commentator-avatar">
+              <img
+                src="image/sec-commentator.svg"
+                alt=""
+                class="commentator-img"
+              />
+              <div class="commentator-name">
+                <h4>Wahid Ari</h4>
+                <p>Designer</p>
+              </div>
+            </div>
+          </div>
+          <div class="commentator">
+            <span class="stars">★★★★☆</span>
+            <p class="commentator-text">
+              Product helps you see how many more days you need to work to reach
+              your financial goal.
+            </p>
+            <div class="commentator-avatar">
+              <img
+                class="commentator-img"
+                src="image/third-commentator.svg"
+                alt=""
+              />
+              <div class="commentator-name">
+                <h4>Wahid Ari</h4>
+                <p>Designer</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="banner">
+        <div class="banner-container container">
+          <h1>Join 100 Companies who boost their business with Product</h1>
+          <button class="banner-button">Get This</button>
+        </div>
+        <div class="banner-img">
+          <img src="image/screen.png" alt="" />
         </div>
       </section>
     </main>
