--- a/index.html
+++ b/index.html
@@ -169,7 +169,6 @@
           </div>
         </div>
       </section>
-
       <section class="process">
         <div class="container process-container">
           <h2>Quick & Easy Process</h2>
@@ -370,6 +369,52 @@
           <img src="image/screen.png" alt="" />
         </div>
       </section>
+      <footer class="footer">
+        <div class="footer-container container">
+          <div class="footer-logo">
+            <a href="#" class="footer-logo-img">
+              <img src="image/logo.svg" alt="" />
+              <h2>Product</h2>
+            </a>
+
+            <div class="social-icons">
+              <a href="#"><img src="image/instagram.svg" alt="Instagram" /></a>
+              <a href="#"><img src="image/facebook.svg" alt="Facebook" /></a>
+              <a href="#"><img src="image/twitter.svg" alt="Twitter" /></a>
+            </div>
+          </div>
+          <div class="footer-links">
+            <div class="resource">
+              <h3>Resource</h3>
+              <ul>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contact</a></li>
+                <li><a href="#">FAQ</a></li>
+              </ul>
+            </div>
+            <div class="legal">
+              <h3>Legal Stuff</h3>
+              <ul>
+                <li><a href="#">Disclaimer</a></li>
+                <li><a href="#">Financing</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Terms of Service</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="footer-subscription">
+            <p>Knowing you're always on the best energy deal.</p>
+            <form>
+              <input type="email" placeholder="Enter your email" />
+              <button type="submit">Sign up Now</button>
+            </form>
+          </div>
+        </div>
+        <div class="footer-bottom">
+          <p>Made With Love By Figmaland All Right Reserved</p>
+        </div>
+      </footer>
     </main>
   </body>
 </html>
