--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="container header-container">
           <div class="header-logo">
             <a href="#"
-              ><img src="image/logo.svg" alt="Logo" />
+              ><img src="image/header-logo.svg" alt="" />
               <img src="image/logotext.svg" alt="" />
             </a>
           </div>
@@ -373,7 +373,7 @@
         <div class="footer-container container">
           <div class="footer-logo">
             <a href="#" class="footer-logo-img">
-              <img src="image/logo.svg" alt="" />
+              <img src="image/header-logo.svg" alt="" />
               <h2>Product</h2>
             </a>
 
